# QuantumSimulator_qorix_incubDeployment-Public

./: CMakeLists.txt  README.md  bell.qasm  qsim_cli  qsim_server  results.txt
frontend/: index.html
include/: AmplitudeDampingChannel.hpp  Benchmark.hpp  BitFlipChannel.hpp  DensityMatrix.hpp  DensityMatrixBackend.hpp  DepolarizingChannel.hpp  GateFuser.hpp  Gates.hpp  MatrixUtils.hpp  PhaseDampingChannel.hpp  PhaseFlipChannel.hpp  QASM_Parser.hpp  QuantumChannel.hpp  QuantumCircuit.hpp  SimulationBackend.hpp  Simulator.hpp  StateVector.hpp  StateVectorBackend.hpp
src/: AmplitudeDampingChannel.cpp  Benchmark.cpp  BitFlipChannel.cpp  DensityMatrixBackend.cpp  DepolarizingChannel.cpp  GateFuser.cpp  Gates.cpp  MatrixUtils.cpp  PhaseDampingChannel.cpp  PhaseFlipChannel.cpp  QASM_Parser.cpp  QuantumCircuit.cpp  Simulator.cpp  StateVector.cpp  StateVectorBackend.cpp  main_cli.cpp  main_server.cpp
tests/: ghz_test.qasm  test_circuit.cpp  test_circuit_extended.cpp  test_cli.cpp  test_cli_extended.cpp  test_densitymatrix.cpp  test_densitymatrix_extended.cpp  test_noise.cpp  test_noise_extended.cpp  test_server.cpp  test_server_extended.cpp  test_statevector.cpp  test_statevector_extended.cpp
